--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -14,7 +14,7 @@
         <div>
             <div class="title">Your bookmarks for this video</div>
 
-            <div class="bookmarks" id="bookmarkAtTime"></div>
+            <div class="bookmarks" id="bookmarkedAtTime"></div>
         </div>
     </div>
 
