--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div>
-            <div class="title">Your bookmarks for this video</div>
+            <div class="title-name">Your bookmarks for this video</div>
 
             <div class="bookmarks" id="bookmarkedAtTime"></div>
         </div>
